--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <link rel="icon" type="image/png" src="disney logo.png"><title>Disney India | The Official Home</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='deem.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='web.css'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 </head> 
 <body>
