--- a/index.html
+++ b/index.html
@@ -22,30 +22,30 @@
         </navbar>
             <div class="top-sect">
                 <div class="fades">
-                <img src="C:\Users\midhu\html projects\mickey.jpeg">
-                <img src="C:\Users\midhu\html projects\mickey and prince.jpeg">
-                <img src="C:\Users\midhu\html projects\disn hotstar">
+                <img src="mickey.jpeg">
+                <img src="mickey and prince.jpeg">
+                <img src="disn hotstar.jpeg">
                 </div>
             </div>
     </header>
             <div class="shop">
                 <div id="brand">
-                <img src="C:\Users\midhu\html projects\disney-x-ginger.jpeg"><span id="mark"> Disney X Ginger<br>&nbsp;&nbsp;&nbsp;&nbsp;SHOP NOW</span></div>
+                <img src="disney-x-ginger.jpeg"><span id="mark"> Disney X Ginger<br>&nbsp;&nbsp;&nbsp;&nbsp;SHOP NOW</span></div>
                 <div id="brand">
-                <img src="C:\Users\midhu\html projects\baby pillow.jpeg">
+                <img src="baby pillow.jpeg">
                 <span id="mark">Disney X Mila Baby<br>&nbsp;&nbsp;&nbsp;&nbsp;SHOP NOW</span></div>
             <div id="brand">
-                <img src="C:\Users\midhu\html projects\final_blue_.jpeg">
+                <img src="final_blue_.jpeg">
                 <span id="mark">Disney X Hair Drama Co.<br>&nbsp;&nbsp;&nbsp;&nbsp;SHOP NOW</span></div>
             <div id="brand">
-                <img src="C:\Users\midhu\html projects\disney_banner_.jpeg"><span id="mark">Disney X Toothless Kids<br>&nbsp;&nbsp;&nbsp;&nbsp;SHOP NOW</span></div>
+                <img src="disney_banner_.jpeg"><span id="mark">Disney X Toothless Kids<br>&nbsp;&nbsp;&nbsp;&nbsp;SHOP NOW</span></div>
             </div>
             <div class="middle-sect">
                 <div class="cap"><span>Featured Ads</span</div>
                 <ul class="fun">
-                <li><img src="C:\Users\midhu\html projects\poko.jpeg">
+                <li><img src="poko.jpeg">
                 <br><span>Disney Imagine That|Disney Channel</span></li>
-                <li><img src="c:\Users\midhu\html projects\miles mora.jpeg"><br>
+                <li><img src="miles mora.jpeg"><br>
                 <span>Marvel's Spiderman</span>
                 <p>When new foes threaten the city, a new web-slinger arises as Spider-Man.</p>
                 <p>Marvel’s Spider-Man: Miles Morales has arrived on PlayStation 4 and PlayStation 5. Get the game now:</p>
@@ -56,22 +56,22 @@
                 <div class="gem">
                     <div class="kjo"><span>Explore Disney Holidays</span></div>
                     <ul>
-                    <li id="trav"><img src="C:\Users\midhu\html projects\eu_dis-prs_.jpeg"><br><span>Legends of the Force<br>&nbsp;&nbsp;<a>Discover now@Disneyland Paris</a></span></li>
-                    <li id="trav"><img src="C:\Users\midhu\html projects\eu_parks_.jpeg"><br><span>14 Day Ticket at 7 day price<br><a>Book with  Walt Disneyworld</a></span></li>
-                    <li id="trav"><img src="C:\Users\midhu\html projects\eu_dcr_always.jpeg"><br><span>Find Your Perfect Holiday<br><a>Book with Disney Cruiseline</a></span></li></ul>
+                    <li id="trav"><img src="eu_dis-prs_.jpeg"><br><span>Legends of the Force<br>&nbsp;&nbsp;<a>Discover now@Disneyland Paris</a></span></li>
+                    <li id="trav"><img src="eu_parks_.jpeg"><br><span>14 Day Ticket at 7 day price<br><a>Book with  Walt Disneyworld</a></span></li>
+                    <li id="trav"><img src="eu_dcr_always.jpeg"><br><span>Find Your Perfect Holiday<br><a>Book with Disney Cruiseline</a></span></li></ul>
                 </div>
                 <div class="klo">More From Disney</div>
                <div class="mickey">
-                    <div id="meow"><img src="C:\Users\midhu\html projects\retina_-.jpg">
+                    <div id="meow"><img src="retina_-.jpg">
                         <span>Disney Junior Birthday Book</span><br><br><p>Make Your Kids birthday even more special by creating your own personalized birthday video for your child</p><br><a>DISNEY JUNIOR</a>
                 </div>
-                <div id="meow"><img src="C:\Users\midhu\html projects\eu_mickey90_.jpeg"><span>Happy Annivesary Mickey</span><br><br><p>It all started with a mouse.We're celebrating 90 years of the True Original</p><br><br><a>DISNEY</a></div>
+                <div id="meow"><img src="eu_mickey90_.jpeg"><span>Happy Annivesary Mickey</span><br><br><p>It all started with a mouse.We're celebrating 90 years of the True Original</p><br><br><a>DISNEY</a></div>
                </div>
                <footer>
                 <div class="footer-sect">
                     <div class="footer-menu">
                         <ul>
-                            <li><a href="www.disney.in"><img src="C:\Users\midhu\html projects\disney logo.png"></a></li>
+                            <li><a href="www.disney.in"><img src="disney logo.png"></a></li>
                             <li>Shop</li>
                             <li>Parks</li>
                             <li>What's New</li>
@@ -85,7 +85,7 @@
                         </ul>
                     </div>
                     </div>
-                    <div class="log"><img src="C:\Users\midhu\Downloads\disney.png"></div>
+                    <div class="log"><img src="disney.png"></div>
                     <div class="foot-notes">
                         <ul>
                         <li>About</li>
